Updated README, segregated requirements based on run/dev, updated linters' configs

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -10,6 +10,12 @@ ignore_missing_imports = True
 [mypy-dash.dependencies]
 ignore_missing_imports = True
 
+[mypy-dash.exceptions]
+ignore_missing_imports = True
+
+[mypy-dash_bootstrap_components]
+ignore_missing_imports = True
+
 [mypy-plotly]
 ignore_missing_imports = True
 
