Added ADCConfig tests

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -24,3 +24,6 @@ ignore_missing_imports = True
 
 [mypy-plotly.graph_objects]
 ignore_missing_imports = True
+
+[mypy-ADS1x15.*]
+ignore_missing_imports = True
