--- a/.mypy.ini
+++ b/.mypy.ini
@@ -3,6 +3,22 @@
 [mypy]
 warn_return_any = True
 warn_unused_configs = True
+warn_redundant_casts = True
+warn_unused_ignores = True
+
+strict_equality = True
+extra_checks = True
+
+check_untyped_defs = True
+
+disallow_subclassing_any = True
+# Only Dash callback is complaining and not sure what to do about it - ignore
+disallow_untyped_decorators = False
+# disallow_any_generics = True
+
+# disallow_untyped_calls = True
+# disallow_incomplete_defs = True
+# disallow_untyped_defs = True
 
 [mypy-dash]
 ignore_missing_imports = True
