--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,21 +22,17 @@
             "editorCursor.foreground": "#000000",
             "minimap.selectionHighlight": "#0000ff",
             "editorBracketMatch.border": "#7b8200",
-            "list.errorForeground": "#000000",
+            "list.errorForeground": "#000000"
         },
         "gitDecoration.modifiedResourceForeground": "#7d5903",
         "toolbar.hoverOutline": "#ff00ff",
         "inputOption.activeBorder": "#ff00ff",
         "icon.foreground": "#ff05d1",
-        // "selection.background": "#f8a57f",
         "editor.selectionHighlightBackground": "#fab08549",
         "editor.selectionBackground": "#504ec7",
         "editor.findMatchBackground": "#ed4cb76f",
         "editor.findMatchBorder": "#f828ff",
-        //"editor.findMatchBorder": "#d4540ab4",
-        "editor.findMatchHighlightBackground": "#ffc19d",
-        // "editorBracketHighlight.foreground1": "#642193",
-        // "editorBracketHighlight.foreground2": "#1300e3"
+        "editor.findMatchHighlightBackground": "#ffc19d"
     },
         // "editor.fontFamily": "'Source Code Pro', 'DejaVu Sans Mono',  'Droid Sans Mono', 'monospace', monospace",
         "editor.renderWhitespace": "all",
